File Read finished, Data Search making

--- a/TermProject_20170454/TermProject_20170454/TermProject_20170454.vcxproj
+++ b/TermProject_20170454/TermProject_20170454/TermProject_20170454.vcxproj
@@ -111,11 +111,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="analyzeFile.c" />
     <ClCompile Include="FindFile.c" />
-    <ClCompile Include="main.c" />
+    <ClCompile Include="Main.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Function_Define.h" />
+    <ClInclude Include="Struct_Define.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
