--- a/TermProject_20170454/TermProject_20170454/TermProject_20170454.vcxproj.filters
+++ b/TermProject_20170454/TermProject_20170454/TermProject_20170454.vcxproj.filters
@@ -15,15 +15,21 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.c">
+    <ClCompile Include="FindFile.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="FindFile.c">
+    <ClCompile Include="Main.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="analyzeFile.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Function_Define.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Struct_Define.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
