--- a/TermProject_20170454/TermProject_20170454/TermProject_20170454.vcxproj
+++ b/TermProject_20170454/TermProject_20170454/TermProject_20170454.vcxproj
@@ -114,6 +114,7 @@
     <ClCompile Include="analyzeFile.c" />
     <ClCompile Include="FindFile.c" />
     <ClCompile Include="Main.c" />
+    <ClCompile Include="QuickSort.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Function_Define.h" />
