--- a/TermProject_20170454/TermProject_20170454/TermProject_20170454.vcxproj.filters
+++ b/TermProject_20170454/TermProject_20170454/TermProject_20170454.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="analyzeFile.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="QuickSort.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Function_Define.h">
