--- a/TermProject_20170454/TermProject_20170454/TermProject_20170454.vcxproj
+++ b/TermProject_20170454/TermProject_20170454/TermProject_20170454.vcxproj
@@ -118,6 +118,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Function_Define.h" />
+    <ClInclude Include="Macro_Define.h" />
     <ClInclude Include="Struct_Define.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
