--- a/TermProject_20170454/TermProject_20170454/TermProject_20170454.vcxproj.filters
+++ b/TermProject_20170454/TermProject_20170454/TermProject_20170454.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClInclude Include="Struct_Define.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Macro_Define.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
